tag wrap issues

--- a/src/styles/components/_text-transform.scss
+++ b/src/styles/components/_text-transform.scss
@@ -22,4 +22,5 @@
 .text-transform-margin__tags {
     font-size: $s-size;
     color: $off-white;
+    word-break: break-word;
 }
